--- a/package.json
+++ b/package.json
@@ -3,22 +3,97 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0 -p 3000",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -H 0.0.0.0 -p 3000",
+    "lint": "eslint src --max-warnings=0",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
+    "test": "jest --maxWorkers=50%",
+    "test:ci": "jest --runInBand",
+    "test:watch": "jest --watch --maxWorkers=25%",
+    "generate": "yarn plop --plopfile generators/plopfile.js",
+    "storybook": "start-storybook -s ./public -p 6006",
+    "build-storybook": "build-storybook -s ./public",
+    "chromatic": "npx chromatic --project-token=####",
+    "format": "prettier 'src/**/*.{js,ts,mjs,cjs,json,tsx}' --write"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/pages/**/*.tsx",
+      "src/components/**/*.tsx",
+      "src/hooks/**/*.tsx",
+      "!src/hooks/index.tsx",
+      "!./utils/tests/helpers.tsx"
+    ]
+  },
+  "lint-staged": {
+    "src/**/*": [
+      "yarn lint --fix",
+      "yarn test --findRelatedTests --bail"
+    ]
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "@hookform/resolvers": "^2.8.3",
+    "@popmotion/popcorn": "^0.4.4",
+    "@styled-icons/material-outlined": "^10.18.0",
+    "@styled-icons/remix-fill": "^10.18.0",
+    "@tanstack/react-table": "^8.11.2",
+    "@tanstack/solid-table": "^8.11.2",
+    "@tanstack/vue-table": "^8.11.2",
+    "antd": "^4.16.13",
+    "date-fns": "^2.25.0",
+    "eslint-config-next": "^14.0.4",
+    "framer-motion": "^4.1.16",
+    "joi": "^17.11.0",
+    "next": "^14.0.4",
+    "next-pwa": "^5.6.0",
+    "polished": "^4.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.19.1",
+    "react-icons": "^4.3.1",
+    "react-loading-skeleton": "^2.1.1",
+    "react-slick": "^0.28.1",
+    "react-table": "^7.8.0",
+    "react-toastify": "^8.1.0",
+    "styled-components": "^5.3.3",
+    "styled-icons": "^10.22.0",
+    "styled-media-query": "^2.1.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "@babel/core": "^7.12.3",
+    "@babel/preset-typescript": "^7.12.1",
+    "@storybook/addon-essentials": "6.2.9",
+    "@storybook/react": "6.2.9",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^13.1.9",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^15.0.3",
+    "@types/react": "^17.0.5",
+    "@types/react-slick": "^0.23.4",
+    "@types/react-table": "^7.7.18",
+    "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.11.1",
+    "chromatic": "^5.2.0",
+    "codecov": "^3.8.2",
+    "cypress": "^7.3.0",
+    "dotenv": "^9.0.2",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^26.6.0",
+    "jest-styled-components": "^7.0.3",
+    "lint-staged": "^11.0.0",
+    "plop": "^2.7.4",
+    "prettier": "^2.1.2",
+    "storybook-addon-next-router": "^2.0.4",
+    "typescript": "^5.3.3"
   }
 }
